  the "-B" and "-P" options as well as the ".MUTEX:" special target.
* make: The SVR4.2 "-w" option has been added to suppress warnings.
* make: The "-u" option (unconditionally make the targets, even those
  that are not outdated) is now a documented feature.
* make: Comments following "ifeq" and other conditionals are now handled
  correctly.
* sccs: The commands "-R info", "-R tell", and "-R clean" now operate
  correctly. They previously terminated operation prematurely when an
  "SCCS" directory was found but other sub-directories at the current
  recursion level had not yet been processed.

Release 070218
* sccs: A "-R" option has been added to enable recursive operation on
  subdirectories.
* sccs: A manual page has been added (based on the 4.3BSD-Tahoe page).
* make: The default variant now has the ".GET:" special target enabled
  to retrieve data from an s.file in the current directory, similar to
  the ".GET_POSIX:" target in the POSIX variant and the behavior of the
  SVR4 variant.
* make: The GNU syntax for conditional macros, "target: variable=value",
  is now accepted.
* make: The GNU syntax for parse-time conditionals, "ifeq (arg1, arg2)",
  "ifdef name", etc., is now supported.
* make: Partial support for GNU style functions, "$(function arguments)",
  has been added. Currently, the supported functions are "dir", "notdir",
  "suffix", "basename", "addsuffix", "addprefix", "join", "wildcard",
  "subst", "patsubst", "strip", "findstring", "filter", "filter-out",
  "sort", "word", "wordlist", "words", "firstword", "shell", "error", and
  "warning".
* make: Fixed the "-jn" option for recursive operation if given without
  space between option and option argument; it was previously ignored.

Release 070211
* SCCS: Most of the manual pages are now available, based on source code
  released by Sun.
* make: Use a POSIX shell or a Bourne shell as default value for $(SHELL)
  depending on whether POSIX mode is enabled or not. The path names of